<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".MainActivity">

   <TextView
     android:id="@+id/textView2"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_below="@+id/binText"
     android:layout_alignLeft="@+id/binText"
     android:text="@string/dec_text"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintHorizontal_bias="0.346"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toTopOf="parent"
     app:layout_constraintVertical_bias="0.264"
     tools:ignore="MissingConstraints,UnknownId" />

   <EditText
     android:id="@+id/userNumber"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_alignLeft="@+id/textView2"
     android:layout_centerVertical="true"
     android:ems="10"
     android:inputType="text"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintHorizontal_bias="0.497"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toTopOf="parent"
     app:layout_constraintVertical_bias="0.333" />

   <TextView
     android:id="@+id/textView3"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_below="@+id/decText"
     android:layout_alignLeft="@+id/decText"
     android:text="@string/bin_text"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintHorizontal_bias="0.33"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toTopOf="parent"
     app:layout_constraintVertical_bias="0.428"
     tools:ignore="MissingConstraints,UnknownId" />

   <EditText
     android:id="@+id/switchedNumber"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_alignLeft="@+id/textView3"
     android:layout_centerVertical="true"
     android:ems="10"
     android:inputType="numberDecimal"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintHorizontal_bias="0.5"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toTopOf="parent" />

   <Button
     android:id="@+id/btnConvert"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:text="@string/btn_text"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toTopOf="parent"
     app:layout_constraintVertical_bias="0.607" />

   <TextView
     android:id="@+id/textView4"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_below="@+id/decText"
     android:layout_alignLeft="@+id/decText"
     android:text="@string/to"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintHorizontal_bias="0.771"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toTopOf="parent"
     app:layout_constraintVertical_bias="0.705"
     tools:ignore="MissingConstraints,UnknownId" />

   <TextView
     android:id="@+id/textView5"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_below="@+id/decText"
     android:layout_alignLeft="@+id/decText"
     android:text="@string/from"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintHorizontal_bias="0.253"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toTopOf="parent"
     app:layout_constraintVertical_bias="0.705"
     tools:ignore="MissingConstraints,UnknownId" />

   <android.support.constraint.Guideline
     android:id="@+id/guideline"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
     app:layout_constraintGuide_begin="20dp" />

   <android.support.constraint.Guideline
     android:id="@+id/guideline2"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
     app:layout_constraintGuide_begin="20dp" />

   <RadioGroup
     android:layout_width="172dp"
     android:layout_height="96dp"
     android:id="@+id/systemFrom"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintHorizontal_bias="0.091"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toBottomOf="@+id/btnConvert"
     app:layout_constraintVertical_bias="0.482">

      <RadioButton
        android:id="@+id/fromTen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ten" />

      <RadioButton
        android:id="@+id/fromTwo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/two" />

      <RadioButton
        android:id="@+id/fromSixteen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sixteen" />
   </RadioGroup>

   <RadioGroup
     android:layout_width="171dp"
     android:layout_height="96dp"
     android:id="@+id/systemTo"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintHorizontal_bias="0.933"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toBottomOf="@+id/btnConvert"
     app:layout_constraintVertical_bias="0.482">

      <RadioButton
        android:id="@+id/toTen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ten" />

      <RadioButton
        android:id="@+id/toTwo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/two" />

      <RadioButton
        android:id="@+id/toSixteen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sixteen" />
   </RadioGroup>

</android.support.constraint.ConstraintLayout>